Issue 315052: Add scrollbars to pre content of samples

--- a/www.html5rocks.com/static/css/base.css
+++ b/www.html5rocks.com/static/css/base.css
@@ -9,8 +9,7 @@ pre {
   border: 1px solid #ccc; 
   padding: 10px; 
   font-size: 120%; 
-  text-overflow: ellipsis; 
-  overflow: hidden; 
+  overflow: auto; 
 }
 pre.diagram { 
   background-color: #FAFAD2; 
